addons/argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    #nginx.ingress.kubernetes.io/proxy-ssl-verify: "off"
    #nginx.ingress.kubernetes.io/proxy-connect-timeout: "300"
    #nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    #nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
spec:
  rules:
  - host: argocd-app-of-apps.lab.local # Ou deixe sem host para aceitar pelo IP direto
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 443
